[gd_scene load_steps=15 format=3 uid="uid://bdiyv0mqbyl5t"]

[ext_resource type="Script" uid="uid://obplarejlmsv" path="res://scripts/ui/menus/setting_panel.gd" id="1_6bw12"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prsce"]

[sub_resource type="Theme" id="Theme_826wr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kc01p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ggp3y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ptake"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_06ihv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1t58"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qr3el"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hubol"]
bg_color = Color(0.984314, 0.384314, 0.0392157, 0.635294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cpub"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vx4p"]
bg_color = Color(0.972549, 0.4, 0.0196078, 0.901961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eyf07"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdapf"]
bg_color = Color(0.141176, 0.0352941, 0.0196078, 1)

[node name="SettingPanel" type="Panel"]
visible = false
self_modulate = Color(0.623529, 0.105882, 0.0431373, 0.933333)
offset_left = 162.454
offset_top = 156.259
offset_right = 1479.45
offset_bottom = 713.259
scale = Vector2(0.621831, 0.780731)
theme_override_styles/panel = SubResource("StyleBoxFlat_prsce")
script = ExtResource("1_6bw12")
theme_override_styles/panel = SubResource("StyleBoxFlat_prsce")

[node name="BackSettingButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1146.0
offset_top = 10.0
offset_right = 1309.0
offset_bottom = 56.0
theme = SubResource("Theme_826wr")
theme_type_variation = &"FlatButton"
theme_override_styles/focus = SubResource("StyleBoxFlat_kc01p")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ggp3y")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ptake")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_06ihv")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_m1t58")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_qr3el")
theme_override_styles/hover = SubResource("StyleBoxFlat_hubol")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_0cpub")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8vx4p")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_eyf07")
theme_override_styles/normal = SubResource("StyleBoxFlat_tdapf")
action_mode = 0
text = "Back"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 78.2592
offset_top = 160.0
offset_right = 124.259
offset_bottom = 183.0
scale = Vector2(3, 3)
text = "Music"

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 242.869
offset_top = 183.396
offset_right = 634.869
offset_bottom = 199.396
scale = Vector2(2, 2)

[node name="MuteMusic" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 1054.69
offset_top = 169.998
offset_right = 1134.69
offset_bottom = 200.998
scale = Vector2(2, 2)
text = "Mute"

[connection signal="pressed" from="BackSettingButton" to="." method="_on_back_setting_button_pressed"]
